add HTML structure to index.hbs

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,11 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<div class="jumbotron">
+  <h1>Women in Tech PDX</h1>
+</div>
 
-{{outlet}}
+<div class="container">
+  {{outlet}}
+</div>
+
+<footer>
+  <p>plant and grow with the women developers in Portland, OR</p>
+</footer>
