create about and community route with basic HTML skeleton on about.hbs and community.hbs

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
 <div class="container">
   {{outlet}}
 </div>
-
+<hr>
 <footer>
-  <p>plant and grow with the women developers in Portland, OR</p>
+  <p><em>plant and grow with the women developers in Portland, OR</em></p>
 </footer>
