--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-sm-6">
-    <h3 class="column-header">Posted Questions</h3>
+    <h3 class="sub-header">Posted Questions</h3>
   </div>
   <div class="col-sm-6">
-    <h3 class="column-header">Ask a Question</h3>
+    <h3 class="sub-header">Ask a Question</h3>
   </div>
 </div>
