add icons to nav bar

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,7 +7,7 @@
     <div class="col-sm-4">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'index'}}<a class="navbar-brand">
-          <!-- <img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
+          <img src="/assets/images/home-flower.png" width="40" height="40" class="d-inline-block align-top" alt="">
           home
         </a>{{/link-to}}
       </nav>
@@ -15,7 +15,7 @@
     <div class="col-sm-4">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'about'}}<a class="navbar-brand">
-          <!-- <img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
+          <img src="/assets/images/sunflower.png" width="40" height="40" class="d-inline-block align-top" alt="">
           about
         </a>{{/link-to}}
       </nav>
@@ -24,7 +24,7 @@
     <div class="col-sm-4">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'community'}}<a class="navbar-brand">
-          <!-- <img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
+          <img src="/assets/images/lotus.png" width="40" height="40" class="d-inline-block align-top" alt="">
           community
         </a>{{/link-to}}
       </nav>
