add functionality to update a post from the posts detail page

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
     <h3 class="sub-header">Posted Questions</h3>
     <ul>
       {{#each model as |post|}}
-        {{post-tile post=post update="update"}}
+        {{post-tile post=post}}
       {{/each}}
     </ul>
   </div>
