--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -2,3 +2,7 @@
 <h3>{{model.question}}</h3>
 <p>Additional notes:</p>
 <p>{{model.notes}}</p>
+
+
+{{update-post post=model update="update"}}
+{{post-detail post=model}}
