--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4" class="nav-column">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'index'}}<a class="navbar-brand">
           <img src="/assets/images/home-flower.png" width="40" height="40" class="d-inline-block align-top" alt="">
@@ -12,7 +12,7 @@
         </a>{{/link-to}}
       </nav>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4" class="nav-column">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'about'}}<a class="navbar-brand">
           <img src="/assets/images/sunflower.png" width="40" height="40" class="d-inline-block align-top" alt="">
@@ -21,7 +21,7 @@
       </nav>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-4" class="nav-column">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'community'}}<a class="navbar-brand">
           <img src="/assets/images/lotus.png" width="40" height="40" class="d-inline-block align-top" alt="">
