--- a/app/templates/community.hbs
+++ b/app/templates/community.hbs
@@ -2,14 +2,14 @@
 <div class="row">
   <p>Florem ipsum sneezeweed peruvian lily dune helleborine plumed thistle. Scabious st john’s wort holy grass false goat’s beard. Bloom glory lily drumstick gentian buttercup cosmos foxtail lily. Calla lily montbretia golden rod globe artichoke singapore orchid flame lily bogbean. Lobster claw grass of parnassus thrift. Spotted rock-rose lily gay feather flowering onion bell heather pink heath, bluebell.</p>
 </div>
-<div class="row">
-  <div class="col-sm-4">
+<div class="row" >
+  <div class="col-sm-4" class="community-info">
     <h3 class="sub-header">Events</h3>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-4" class="community-info">
     <h3 class="sub-header">Podcasts</h3>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-4" class="community-info">
     <h3 class="sub-header">Articles</h3>
   </div>
 </div>
