add functionality to answer a question on the questions detail page

--- a/app/templates/components/post-detail.hbs
+++ b/app/templates/components/post-detail.hbs
@@ -1,1 +1,6 @@
-{{yield}}
+<p>answers</p>
+<ul>
+  {{#each post.answers as |answer|}}
+    <li>{{answer.answer}} -{{answer.author}}</li>
+  {{/each}}
+</ul>
