--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
   <div class="col-sm-6">
     <h3 class="sub-header">Posted Questions</h3>
     <ul>
-      {{#each model as |post|}}
+      {{#each model.posts as |post|}}
         {{post-tile post=post}}
       {{/each}}
     </ul>
