--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -1,1 +1,1 @@
-<li>{{#link-to 'post' post.id}}<b>{{post.question}}</b>, <em>{{post.author}}</em>{{/link-to}}</li>
+<li>{{#link-to 'post' post.id}}<b>{{post.question}}</b> - <em>{{post.author}}</em>{{/link-to}}</li>
