center images over nav bar in app.css

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,6 +7,18 @@
   margin-left: 168px;
 }
 
+#community-img {
+  margin-left: 25px;
+}
+
+#about-img {
+  margin-left: 4px;
+}
+
+#home-img {
+  margin-left: 3px;
+}
+
 .sub-header {
   text-align: center;
 }
