--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,7 +7,7 @@
     <div class="col-sm-4" class="nav-column">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'index'}}<a class="navbar-brand">
-          <img src="/assets/images/home-flower.png" width="40" height="40" class="d-inline-block align-top" alt="">
+          <img src="/assets/images/home-flower.png" width="40" height="40" class="d-inline-block align-top" id="home-img">
           home
         </a>{{/link-to}}
       </nav>
@@ -15,7 +15,7 @@
     <div class="col-sm-4" class="nav-column">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'about'}}<a class="navbar-brand">
-          <img src="/assets/images/sunflower.png" width="40" height="40" class="d-inline-block align-top" alt="">
+          <img src="/assets/images/sunflower.png" width="40" height="40" class="d-inline-block align-top" id="about-img">
           about
         </a>{{/link-to}}
       </nav>
@@ -24,7 +24,7 @@
     <div class="col-sm-4" class="nav-column">
       <nav class="navbar navbar-light bg-faded">
         {{#link-to 'community'}}<a class="navbar-brand">
-          <img src="/assets/images/lotus.png" width="40" height="40" class="d-inline-block align-top" alt="">
+          <img src="/assets/images/lotus.png" width="40" height="40" class="d-inline-block align-top" id="community-img">
           community
         </a>{{/link-to}}
       </nav>
