--- a/app/templates/components/post-detail.hbs
+++ b/app/templates/components/post-detail.hbs
@@ -1,6 +1,7 @@
-<p>answers</p>
-<ul>
+<br>
+<h3>Answers</h3>
+<ol>
   {{#each post.answers as |answer|}}
     <li>{{answer.answer}} -{{answer.author}}</li>
   {{/each}}
-</ul>
+</ol>
