add background image to footer and text styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -33,7 +33,6 @@
   <hr>
   {{outlet}}
 </div>
-<hr>
 <footer>
-  <p><em>plant and grow with the women developers in Portland, OR</em></p>
+  <p id="footer-text">plant and grow with the <span id="women">women developers</span> in Portland, OR</p>
 </footer>
