--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,11 +1,11 @@
 .jumbotron {
   text-align: center;
   background-image: url('/assets/images/code.jpeg');
-  /*background-size: cover;*/
   background-position: top;
   background-size: cover;
   height: 290px;
   color: #63728c;
+  letter-spacing: 5px;
 }
 
 .nav-column {
@@ -47,5 +47,27 @@ b, strong {
 }
 
 footer {
-  text-align: center;
+  background-image: url('/assets/images/succulent.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.8;
+  height: 120px;
+  margin-top: 200px;
+}
+
+#footer-text {
+  text-align: right;
+  color: white;
+  padding-top: 3.5%;
+  font-size: 16px;
+  letter-spacing: 1.3px;
+  text-shadow: 10px;
+  font-weight: bolder;
+}
+
+#women {
+  font-size: 20px;
+  letter-spacing: 0px;
+  color: black;
 }
