add text content and links to community.hbs

--- a/app/templates/community.hbs
+++ b/app/templates/community.hbs
@@ -1,15 +1,24 @@
 <h2 class="sub-header">Community</h2>
 <div class="row">
-  <p>Florem ipsum sneezeweed peruvian lily dune helleborine plumed thistle. Scabious st john’s wort holy grass false goat’s beard. Bloom glory lily drumstick gentian buttercup cosmos foxtail lily. Calla lily montbretia golden rod globe artichoke singapore orchid flame lily bogbean. Lobster claw grass of parnassus thrift. Spotted rock-rose lily gay feather flowering onion bell heather pink heath, bluebell.</p>
+  <p class="sub-header">Women in Tech PDX is for all levels of developers wanting to grow together!</p>
 </div>
 <div class="row" >
   <div class="col-sm-4" class="community-info">
     <h3 class="sub-header">Events</h3>
+    <p><a href="http://calagator.org/">Tech Meet Ups</a></p>
   </div>
   <div class="col-sm-4" class="community-info">
     <h3 class="sub-header">Podcasts</h3>
+    <p><a href="http://podcast.womenintechshow.com/episodes">Women in Tech Show</a></p>
+    <p><a href="https://itunes.apple.com/gb/podcast/less-than-or-equal/id890268267?mt=2">Less Than or Equal</a></p>
+    <p><a href="https://itunes.apple.com/gb/podcast/nerdette-podcast/id658467561?mt=2">Nerdette</a></p>
+    <p><a href="http://www.codenewbie.org/podcast">Code Newbie</a></p>
+    <p><a href="https://itunes.apple.com/us/podcast/women-who-code-radio/id1141694878?mt=2">Women Who Code</a></p>
   </div>
   <div class="col-sm-4" class="community-info">
     <h3 class="sub-header">Articles</h3>
+    <p><a href="https://medium.com/this-is-hard/the-other-side-of-diversity-1bb3de2f053e">The Other Side of Diversity</a></p>
+    <p><a href="https://www.themuse.com/advice/the-history-of-women-in-tech-is-longer-and-cooler-than-you-know">The History of Women in Tech</a></p>
+    <p><a href="https://www.themuse.com/advice/hacker-heroes-6-women-who-have-changed-technology">Hacker Heroes: 6 Women Who have Changed Tech</a></p>
   </div>
 </div>
